tests/loops/valid/do_while.su
s32 main() {
    s32 a = 1;
    do {
        a = a * 2;
    } while(a < 11);

    return a;
}