tests/loops/invalid/out_of_scope_do_while.su
s32 main() {
    do {
        s32 a = 2;
    } while (a);
    return 0;
}